Alteração nome ficheiro

--- a/02.1-homework/quotes.html
+++ b/02.1-homework/quotes.html
@@ -18,7 +18,7 @@
     </ul>
     <hr>
 
-    <h2 title="Touch"><u><i>Human</i></u></h2>
+   <h2 title="Touch"><u><i>Human</i></u></h2>
     <p>"Human beings are not the strongest species on the planet.<br>
          We're not the fastest, or maybe even the smartest. <br>
          The one advantage we have is our ability to cooperate, to help each other out. <br>
@@ -42,7 +42,7 @@
         .Torey Hayden.
     </p>
    
-        <a href="aboutme.html"title="Originals"> Go to about me</a>
+        <a href="index.html"title="Originals"> Go to about me</a>
 
 </body>
 </html>
