--- a/01-html/01-links.html
+++ b/01-html/01-links.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links</title>
 </head>
+
 <body>
     <h1>Links</h1>
 
-    <section>
-<h2 id="global-urls">Global URLs</h2>
+<div>
+    <h2 id="global-urls">Global URLs</h2>
 
- <a href="https://www.google.pt">Google</a>   
- <a href="https://www.google.pt/search?sxsrf=ALeKk00xgZmy_3OQKJ8AOiIPjijqzeWCYg%3A1605958290777&source=hp&ei=kvq4X83ULKiLjLsP8fqwkAE&q=cats&oq=cats&gs_lcp=CgZwc3ktYWIQAzIICC4QsQMQkwIyAgguMgIILjICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BwgjEOoCECc6BAgjECc6BQgAELEDOggIABCxAxCDAToFCC4QsQNQ8ZYbWKaeG2CcoRtoAXAAeAGAAYIDiAHsBpIBBzEuMy4wLjGYAQCgAQGqAQdnd3Mtd2l6sAEK&sclient=psy-ab&ved=0ahUKEwjN5cXrxJPtAhWoBWMBHXE9DBIQ4dUDCAc&uact=5">Search for cats</a>
- <a href="http://localhost:5500/01-html/00-basic-tags.html">Basic tags</a>
-</section>
+        <a href="https://www.google.pt">Google</a>   
+        <a href="https://www.google.pt/search?sxsrf=ALeKk00xgZmy_3OQKJ8AOiIPjijqzeWCYg%3A1605958290777&source=hp&ei=kvq4X83ULKiLjLsP8fqwkAE&q=cats&oq=cats&gs_lcp=CgZwc3ktYWIQAzIICC4QsQMQkwIyAgguMgIILjICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BwgjEOoCECc6BAgjECc6BQgAELEDOggIABCxAxCDAToFCC4QsQNQ8ZYbWKaeG2CcoRtoAXAAeAGAAYIDiAHsBpIBBzEuMy4wLjGYAQCgAQGqAQdnd3Mtd2l6sAEK&sclient=psy-ab&ved=0ahUKEwjN5cXrxJPtAhWoBWMBHXE9DBIQ4dUDCAc&uact=5">Search for cats</a>
+        <a href="http://localhost:5500/01-html/00-basic-tags.html">Basic tags</a> <br>
+        <img src="https://avatars1.githubusercontent.com/u/74411799?s=460&v=4"/>
+</div>
 
- <section>
-<h2>Relative URLs</h2>
+<div>
+    <h2>Relative URLs</h2>
 
- <a href="00-basic-tags.html">Basic tags</a>
- <a href="./00-basic-tags.html">Basic tags</a>
- <a href="../00-crashcourse/index.html">Crash course</a>
+        <a href="00-basic-tags.html">Basic tags</a>
+        <a href="./00-basic-tags.html">Basic tags</a>
+        <a href="../00-crashcourse/index.html">Crash course</a>
 
-<a href="#global-urls">Global URLs</a>
-</section>
+        <a href="#global-urls">Global URLs</a>
+ </div>
 
 </body>
 </html>
