--- a/02.1-homework/originals.html
+++ b/02.1-homework/originals.html
@@ -4,6 +4,9 @@
 <title>Silence of memories</title>
 <meta name="description" content="Just some of my memories and thougts">
 <meta name="keywords" content="memories silence blog">
+
+<link href="style.css" rel="stylesheet">
+
 </head>
 <body>
 <h1><i>&lceil; The silence of my memories &rfloor;</i> </h1> 
