--- a/02-css-base/about.html
+++ b/02-css-base/about.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link href="style.css" rel="stylesheet">
+ <link href="style.css" rel="stylesheet">
+ 
     <style>
         h1 {
             color: purple;
         }
+        p {
+            color: lightgreen;
+        }
     </style>
+
 </head>
 
 <body>
