--- a/02-css-base/index.html
+++ b/02-css-base/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link href="style.css" rel="stylesheet">
+   
 
 </head>
 
@@ -14,7 +15,7 @@
     </header>
 
     <main>
-        <p>Hello world!</p>
+        <p>Hello world! CSS is <strong>great</strong></p>
     </main>
 
     <footer>
