--- a/02.1-homework/index.html
+++ b/02.1-homework/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silence of memories</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1><i>&lceil; The silence of my memories &rfloor;</i> </h1> 
