--- a/02-css-base/index.html
+++ b/02-css-base/index.html
@@ -16,6 +16,13 @@
 
     <main>
         <p>Hello world! CSS is <strong>great</strong></p>
+
+        <p id="special-paragraph"> I'm special</p>
+
+        <p class="nomargin">Look ma, no margins!</p>
+
+        <p class="nomargin">Me too, no spacing at all!</p>
+
     </main>
 
     <footer>
