--- a/02.1-homework/index.html
+++ b/02.1-homework/index.html
@@ -11,17 +11,14 @@
     <div class="header">
         <h1><i>The silence of memories </i> </h1>
     </div>
-        
-<br>
 
-     <ul class="menunav">
-        <a  href=originals.html><li class="menunav">Originals</li></a>
-        <a  href=images.html><li class="menunav">Images</li></a>
-        <a  href=quotes.html><li class="menunav">Quotes</li></a>
-        <a  href=aboutme.html><li class="menunav">About me</li></a> 
-        <a  href=contacts.html><li class="menunav">Contacts</li></a>
-    </ul>
-
+    <div class="menunav">
+        <a href=originals.html> <div class="menu">Originals</div></a>
+        <a  href=images.html><div class="menu">Images</div> </a>
+        <a  href=quotes.html><div class="menu">Quotes</div> </a>
+        <a  href=quotes.html><div class="menu">About me</div> </a>
+        <a  href=contacts.html><div class="menu">Contacts</div> </a>
+    </div>
 <br>
 
 <div class="column">
