Complete some boxes

--- a/Currículo/academicexperience.html
+++ b/Currículo/academicexperience.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="otherboxes.css" rel="stylesheet">
 </head>
 <body>
-    
+<h1><i>Academic Experience</i></h1>
+   
+<p>2015-2017</p>
+<p>Instituto Superior de Engenharia do Porto</p>
+<p>Master degree in Chemical Engineering in the field of Energy and Biorefinery.</p>
+
+<p>2011-2015</p>
+<p>Instituto Superior de Engenharia do Porto</p>
+<p>Degree in Chemical Engineering.</p>
+
+<p>2008-2011</p>
+<p>...</p>
+
+<a href="./index.html">Back to homepage</a> 
+
+<footer>&copy; 2020 Conceição Ferreira</footer>
+
 </body>
 </html>
