--- a/Currículo/index.html
+++ b/Currículo/index.html
@@ -16,17 +16,17 @@
 <div class="global1"> 
 ​
     <div class="box">
-        <p>About me</p>
+        <a href=aboutme.html><p>About me</p></a>
     </div>
 ​
     <div class="box">
-        <p>Skills</p>
+        <a href=skills.html><p>Skills</p></a>
     </div>
 </div>   
 
 <div class="global2">
     <div class="box">
-        <p>Professional experience</p>
+        <a href=professionalexperience.html><p>Professional experience</p></a>
     </div>
      
     <div class="boxpic">
@@ -34,21 +34,23 @@
     </div>
 ​
     <div class="box">
-        <p>Academic experience</p>
+        <a href=academicexperience.html><p>Academic experience</p></a>
     </div>
 
 </div>
 
 <div class="global1">
     <div class="box">    
-        <p>Portfolio</p>
+       <a href=portfolio.html><p>Portfolio</p></a>
     </div>
 ​
     <div class="box">
-        <p>Contacts</p>
+        <a href=contacts.html><p>Contacts</p></a>
     </div>
 ​
 </div>
+
+<footer>&copy; 2020 Conceição Ferreira</footer>
 ​
 </body>
 </html>
