--- a/Currículo/professionalexperience.html
+++ b/Currículo/professionalexperience.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Professional Experienc</title>
+    <link href="otherboxes.css" rel="stylesheet">
 </head>
 <body>
-    
+
+<h1><i>Professional Experience</i></h1>
+
+<div class="container">
+    <p><b>Tintas 2000 S.A.</b></p>
+    <p>2015</p>
+    <div class="appear"> 
+    <p>Estágio curricular com duração de 5 meses, onde estive integrada no Departamento de Colorimetria, 
+    desenvolvendo funções na afinação automática a cor. <br>
+    Formulação da cor e o contacto direto com os clientes
+    </p>
+</div>
+
+<p><b>Tintas 2000 S.A.</b></p>
+
+<p>2016-Today</p>
+
+<div class="appear"> 
+    <p>Specify functions</p>
+</div>
+
+<p><b>Particular explications</b></p>
+<p>2020</p>
+
+</div>
+
+<a href="./index.html">Back to homepage</a> 
+
+<footer>&copy; 2020 Conceição Ferreira</footer>
+
 </body>
 </html>
