--- a/Currículo/skills.html
+++ b/Currículo/skills.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Skills</title>
+    <link href="otherboxes.css" rel="stylesheet">
 </head>
+
 <body>
-    
+
+<h1>Skills</h1>
+
+<div class="container">
+    <p>&rarr; Laboratory skills </p> 
+    <p>&rarr; Driving license - Category B </p> 
+    <p>&rarr; Fluent in english</p>
+    <p><i>&rarr;Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+        It has survived not only five centuries, but also the leap into electronic typesetting, 
+        remaining essentially unchanged. It was popularised in the 1960s with the release of 
+        Letraset sheets containing Lorem Ipsum passages, and more recently with 
+        desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</i></p>
+</div>
+
+<a href="./index.html">Back to homepage</a> 
+
+<footer>&copy; 2020 Conceição Ferreira</footer>
+
 </body>
 </html>
